Fix wordwrapping on chatMessages.

--- a/client/app/chat/chatWindow.styl
+++ b/client/app/chat/chatWindow.styl
@@ -73,6 +73,9 @@ div.chatWindow, div.mobileChatWindow
 				width: calc(100% - 35px)
 				margin-left: 5px
 
+				overflow-x: hidden
+				word-wrap: break-word
+
 				text-align: justify
 
 		div.message.own
